# real_state_price_prediction

./: .gitignore  LICENSE  Makefile  README.md  justfile  pyproject.toml  setup.py  test_environment.py  tox.ini
deploy/: DEPLOY.md
docs/: Makefile  README.md  conf.py  index.rst  make.bat  src.rst
docs/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.data.html  src.features.html  src.html  src.models.html  src.service.html  src.visualization.html  test_environment.html
docs/html/_modules/: index.html  test_environment.html
docs/html/_modules/spacy/lang/: en.html
docs/html/_modules/spellchecker/: spellchecker.html
docs/html/_modules/src/: listing_etl_pipeline.html  neighbourhood_etl_pipeline.html  review_etl_pipeline.html
docs/html/_modules/src/models/: predict_model.html  train_model.html
docs/html/_modules/src/service/: DataService.html  EmbeddingService.html  NlpService.html  TrainService.html
docs/html/_modules/src/visualization/: visualize.html
docs/html/_sources/: modules.rst.txt  src.service.rst.txt
notebooks/: house_rent_prediction.ipynb  real_state_price_prediction.ipynb
references/: REPORT.md
reports/: property_map.html
reports/figures/: property_map.html
src/: calendar_pipeline.py  calendar_process.py  listing_etl_pipeline.py  listing_pipeline.py  listing_process.py  main.py  neighbourgood_process.py  neighbourhood_etl_pipeline.py  review_etl_pipeline.py  review_pipeline.py  review_process.py
src/data/: make_dataset.py
src/deploy/: DEPLOY.md  deployment.py
src/features/: build_features.py
src/models/: predict_model.py  train_model.py
src/service/: AnalyticService.py  DataService.py  EDA.py  EmbeddingService.py  NlpService.py  RentalLogger.py  TrainService.py
src/visualization/: show_analysis.py  visualize.py
tests/: test_datasets.py
